move all stream api to pure api